# carrie

./: .env  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  compose.dev.yml  pixi.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: defect.md  feature_request.md  regression.md
carrie_control/: CMakeLists.txt  README.md  package.xml
carrie_control/config/: carrie_controllers.yaml
carrie_control/launch/: carrie_control.launch.py
carrie_control/urdf/: carrie_ros2_control.urdf.xacro
carrie_description/: CMakeLists.txt  README.md  package.xml
carrie_description/launch/: carrie_description.launch.py  view_carrie.launch.py
carrie_description/meshes/: estop_link.dae  torso_fixed_link.dae
carrie_description/rviz/: view_robot.rviz
carrie_description/test/: test_urdf.py
carrie_description/urdf/: carrie.urdf.xacro
carrie_gz/: CMakeLists.txt  README.md  package.xml
carrie_gz/config/: bridge_config.yaml
carrie_gz/config_gui/: default.config
carrie_gz/launch/: carrie_gz.launch.py  gz_ros_bridge.launch.py  spawn_robot.launch.py  view_frames.launch.py
carrie_gz/launch/include/: spawn_robot.launch.py
carrie_gz/rviz/: carrie_gz.rviz
carrie_gz/urdf/: carrie_gz.urdf.xacro
carrie_gz/worlds/: empty.sdf
